# stock-analysis-bot

./: README.md  pyproject.toml
stock_analysis_bot/: eda.ipynb  main.py  pipeline.py
