[tool.poetry]
name = "stock-analysis-bot"
version = "0.1.0"
description = ""
authors = ["Michael Sonke <solidsnakecase>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.41"
matplotlib = "^3.9.1.post1"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
